--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <div id="unity-build-title">ZombiePuzzle</div>
       </div>
     </div>
-   
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -57,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/0.1.0.loader.js";
+      var loaderUrl = buildUrl + "/gitpages.loader.js";
       var config = {
-        dataUrl: buildUrl + "/0.1.0.data.br",
-        frameworkUrl: buildUrl + "/0.1.0.framework.js.br",
-        codeUrl: buildUrl + "/0.1.0.wasm.br",
+        dataUrl: buildUrl + "/gitpages.data",
+        frameworkUrl: buildUrl + "/gitpages.framework.js",
+        codeUrl: buildUrl + "/gitpages.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Nóis",
         productName: "ZombiePuzzle",
@@ -115,6 +114,6 @@
         });
       };
       document.body.appendChild(script);
-    </script> 
+    </script>
   </body>
 </html>
